--- a/scrapy.cfg
+++ b/scrapy.cfg
@@ -4,11 +4,11 @@
 # https://scrapyd.readthedocs.org/en/latest/deploy.html
 
 [settings]
-default = scrapy_kupatana.settings
+default = components.settings
 
 [deploy]
 #url = http://localhost:6800/
-project = kupatana
+project = scrapy-example
 
 #[deploy:bookmyshow_spy]
 #url = http://localhost:6800/api/scrapyd
